# hysds-framework

./: .gitignore  README.md  SPLIT_BUILD_IMPLEMENTATION.md  archived_history.txt  configure.sh  download_asset.py  download_latest.py  download_latest_pkg.py  install.sh  latest_release.txt  pyproject.toml  query_releases.py
.circleci/: MULTIPLATFORM_BUILD_NOTES.md  config.yml
.github/workflows/: publish.yml
tests/: test_download_latest.py  test_query_releases.py
