[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hysds"
version = "7.0.1rc2"
description = "HySDS — Hybrid Cloud Science Data System"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "HySDS", email = "hysds-help@jpl.nasa.gov" }]
keywords = ["hysds", "science", "data", "system", "workflow", "orchestration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Base deps — installed for ALL components
# Using exact pins for tested, reproducible releases
dependencies = [
    "hysds-core==7.0.8rc1",
    "hysds-osaka==7.0.1",
    "hysds-prov-es==7.0.0",
    "hysds-commons==7.0.1",
    "hysds-sdscli==7.0.4rc1",
    # Centralized third-party constraints for consistency across ecosystem
    "elasticsearch>=7.0.0,<7.14.0",
    "elasticsearch-dsl>=7.0.0,<7.4.0",
    "opensearch-py>=2.3.0,<3.0.0",
    "Flask>=2.2,<3.0",
    "werkzeug>=2.2,<3.0",
    "redis~=5.2",
    "numpy<2.0.0",
    "lxml>=3.4.0,<5.0.0",
]

[project.optional-dependencies]
mozart = ["hysds-mozart==7.0.5rc1", "hysds-chimera==7.0.2rc1", "hysds-sciflo==7.0.2"]
grq = ["hysds-grq2==7.0.4rc1", "hysds-pele==7.0.2rc1"]
metrics = []  # Metrics node only needs base deps
verdi = ["hysds-chimera==7.0.2rc1", "hysds-sciflo==7.0.2"]
all = ["hysds[mozart,grq,metrics,verdi]"]
dev = ["pytest>=9.0", "pytest-cov", "black", "flake8", "isort", "pre-commit"]

[project.urls]
Homepage = "https://github.com/hysds/hysds-framework"
Repository = "https://github.com/hysds/hysds-framework"
Issues = "https://github.com/hysds/hysds-framework/issues"
Documentation = "https://hysds.github.io/hysds-framework/"

# Meta-package with minimal placeholder - actual hysds package provided by hysds-core
[tool.hatch.build.targets.wheel]
packages = ["hysds"]
